infra/k8s/order-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: order-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order
    template:
      metadata:
        labels:
          app: order
      spec:
        containers:
          - name: order
            image: jiaulislam/order.ticketing.dev:latest
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  type: ClusterIP
  selector:
      app: order
  ports:
    - name: order-port
      protocol: TCP
      port: 4002
      targetPort: 4002
