infra/k8s/ticket-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: ticket-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticket
  template:
    metadata:
      labels:
        app: ticket
    spec:
      containers:
        - name: ticket
          image: jiaulislam/ticket.ticketing.dev:latest
---
apiVersion: v1
kind: Service
metadata:
  name: ticket-service
spec:
  type: ClusterIP
  selector:
      app: ticket
  ports:
    - name: ticket-port
      protocol: TCP
      port: 4001
      targetPort: 4001
