infra/k8s/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: ticketing.dev
      http:
        paths:
          - path: /api/v1/auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 4000
          - path: /api/v1/users
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 4000
          - path: /api/v1/tickets
            pathType: Prefix
            backend:
              service:
                name: ticket-service
                port:
                  number: 4001
          - path: /api/v1/orders
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 4002
